Update pricing cards design and content

--- a/index.html
+++ b/index.html
@@ -2096,16 +2096,18 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
           <!-- Angebot 1 -->
           <div
-            class="opacity-60 bg-gray-50 rounded-xl p-6 border border-gray-200 flex flex-col h-full relative overflow-hidden"
+            class="opacity-100 bg-white rounded-xl p-6 border-4 border-green-500 flex flex-col h-full relative overflow-hidden shadow-lg"
           >
             <div
-              class="absolute top-0 right-0 bg-red-500 text-white py-1 px-4 rounded-bl-lg text-sm font-medium"
+              class="absolute top-0 right-0 bg-green-500 text-white py-1 px-4 rounded-bl-lg text-sm font-medium"
             >
-              Ausverkauft
+              Aktuell
             </div>
-            <h3 class="text-xl font-bold mb-2">Frühvogel-Angebot</h3>
+            <h3 class="text-xl font-bold mb-2">
+              Globaler Produkterlebnisoffizier
+            </h3>
             <div class="text-3xl font-bold mb-4">199 €</div>
-            <div class="mb-4 text-sm text-gray-500">Nur 200 Geräte</div>
+            <div class="mb-4 text-sm text-gray-500">Nur bis 30.04.2025</div>
             <ul class="mb-6 flex-1 space-y-2 text-sm">
               <li class="flex items-start">
                 <svg
@@ -2122,7 +2124,7 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>Veröffentlicht am 10. März 2025</span>
+                <span>1 jahr kostenlose Online-Datenspeicherung</span>
               </li>
               <li class="flex items-start">
                 <svg
@@ -2139,11 +2141,11 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>Ausverkauft am 11. März 2025</span>
+                <span>1 Jahr kostenlose manuelle Risiko</span>
               </li>
               <li class="flex items-start">
                 <svg
-                  class="w-5 h-5 text-red-500 mr-2 flex-shrink-0"
+                  class="w-5 h-5 text-green-500 mr-2 flex-shrink-0"
                   fill="none"
                   stroke="currentColor"
                   viewBox="0 0 24 24"
@@ -2153,10 +2155,30 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="2"
-                    d="M6 18L18 6M6 6l12 12"
+                    d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>Nicht mehr verfügbar</span>
+                <span>0 Risiko-90 Tage Geld zurueck Garantie</span>
+              </li>
+              <li class="flex items-start">
+                <svg
+                  class="w-5 h-5 text-green-500 mr-2 flex-shrink-0"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M5 13l4 4L19 7"
+                  ></path>
+                </svg>
+                <span
+                  >In Produktion bzw.Versandbereitstellung,Lieferung ab
+                  01.05</span
+                >
               </li>
             </ul>
             <p class="text-sm text-gray-600 mb-4">
@@ -2166,27 +2188,21 @@
               Bedürfnisse zu erfüllen.
             </p>
             <button
-              disabled=""
-              class="mt-auto w-full py-2 bg-gray-100 text-gray-300 rounded-xl cursor-not-allowed"
+              class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300"
             >
-              Ausverkauft
+              Jetzt Angebot sichern
             </button>
           </div>
 
           <!-- Angebot 2 -->
           <div
-            class="bg-white rounded-xl p-6 border-4 border-green-500 flex flex-col h-full relative overflow-hidden shadow-lg"
+            class="opacity-60 bg-white rounded-xl p-6 flex flex-col h-full relative overflow-hidden shadow-lg"
           >
-            <div
-              class="absolute top-0 right-0 bg-green-500 text-white py-1 px-4 rounded-bl-lg text-sm font-medium"
-            >
-              Aktuell
-            </div>
-
-            <h3 class="text-xl font-bold mb-2">Spezialangebot</h3>
-            <div class="text-3xl font-bold mb-4">299 €</div>
+            <h3 class="text-xl font-bold mb-2">Komplett-Pflegepaket</h3>
+            <div class="text-3xl font-bold mb-4">518 €</div>
             <div class="mb-4 text-sm text-gray-500">
-              Nur 500 Geräte, pro Person ausschließlich!
+              Nur ein Kompakt-Pflegepaket pro Person möglich – da individuelle
+              Betreuung enthalten ist.
             </div>
             <ul class="mb-6 flex-1 space-y-2 text-sm">
               <li class="flex items-start">
@@ -2243,7 +2259,45 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>KI-priorisierte Lieferung nach individuellem Bedarf</span>
+                <span>Priorisierte Lieferung nach individuellem Bedarf</span>
+              </li>
+              <li class="flex items-start">
+                <svg
+                  class="w-5 h-5 text-green-500 mr-2 flex-shrink-0"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M5 13l4 4L19 7"
+                  ></path>
+                </svg>
+                <span>0 Risiko-90 Tage Geld zurueck Garantie</span>
+              </li>
+              <li class="flex items-start">
+                <svg
+                  class="w-5 h-5 text-green-500 mr-2 flex-shrink-0"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M5 13l4 4L19 7"
+                  ></path>
+                </svg>
+                <span
+                  >In Produktion: Lieferung ab Mitte Juli. Abonnieren Sie bitte
+                  unseren Newsletter, um über den aktuellen Lieferstatus
+                  informiert zu bleiben</span
+                >
               </li>
             </ul>
             <p class="text-sm text-gray-600 mb-4">
@@ -2268,11 +2322,11 @@
 
           <!-- Angebot 3 -->
           <div
-            class="bg-gray-50 rounded-xl p-6 border border-gray-200 flex flex-col h-full"
+            class="bg-gray-50 rounded-xl p-6 border border-gray-200 flex flex-col h-full opacity-60"
           >
             <h3 class="text-xl font-bold mb-2">Einführungspreis</h3>
-            <div class="text-3xl font-bold mb-4">259 €</div>
-            <div class="mb-4 text-sm text-gray-500">Regulärer UVP-Preis</div>
+            <div class="text-3xl font-bold mb-4">299 €</div>
+            <div class="mb-4 text-sm text-gray-500">Regulaere UVP-Preis</div>
             <ul class="mb-6 flex-1 space-y-2 text-sm">
               <li class="flex items-start">
                 <svg
@@ -2325,13 +2379,45 @@
                 </svg>
                 <span>Deutsche Qualitätstechnologie</span>
               </li>
+              <li class="flex items-start">
+                <svg
+                  class="w-5 h-5 text-green-500 mr-2 flex-shrink-0"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M5 13l4 4L19 7"
+                  ></path>
+                </svg>
+                <span>0 Risiko-90 Tage Geld zurueck Garantie</span>
+              </li>
+              <li class="flex items-start">
+                <svg
+                  class="w-5 h-5 text-green-500 mr-2 flex-shrink-0"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M5 13l4 4L19 7"
+                  ></path>
+                </svg>
+                <span
+                  >In Produktion: Lieferung ab Mitte Juli nach
+                  Komplette-Pflegepaket</span
+                >
+              </li>
             </ul>
-            <p class="text-sm text-gray-600 mb-4">
-              Der UVP-Preis von 259 € ist unser Standardeinführungspreis für die
-              Vorabvermarktung. Er spiegelt den echten Wert dieser
-              revolutionären Technologie wider – eine Investition in Ihre
-              Gesundheit, die sich lohnt.
-            </p>
+
             <a
               href="klarna-payment-info.html"
               class="text-blue-600 hover:underline text-sm block mb-4"
