Update pricing tables and warning text

--- a/blutdruck-test-merged.html
+++ b/blutdruck-test-merged.html
@@ -608,9 +608,10 @@
             >
               Ausverkauft
             </div>
-            <h3 class="text-xl font-bold mb-2">Frühvogel-Angebot</h3>
+            <h3 class="text-xl font-bold mb-2">
+              Earlybird Preis für die ersten 200 Stk.
+            </h3>
             <div class="text-3xl font-bold mb-4">199 €</div>
-            <div class="mb-4 text-sm text-gray-500">Nur 200 Geräte</div>
             <ul class="mb-6 flex-1 space-y-2 text-sm">
               <li class="flex items-start">
                 <svg
@@ -627,7 +628,10 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>Veröffentlicht am 10. März 2025</span>
+                <span
+                  >1 Jahr Subsription fuer Leistungsfaehigkeit Bewertung durch
+                  APP</span
+                >
               </li>
               <li class="flex items-start">
                 <svg
@@ -644,11 +648,11 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>Ausverkauft am 11. März 2025</span>
+                <span>1 Jahr kostenlose Online-Datenspeicherung</span>
               </li>
               <li class="flex items-start">
                 <svg
-                  class="w-5 h-5 text-red-500 mr-2 flex-shrink-0"
+                  class="w-5 h-5 text-green-500 mr-2 flex-shrink-0"
                   fill="none"
                   stroke="currentColor"
                   viewBox="0 0 24 24"
@@ -658,18 +662,27 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="2"
-                    d="M6 18L18 6M6 6l12 12"
+                    d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>Nicht mehr verfügbar</span>
+                <span>0 Risiko-90 Tage Geld zurueck Garantie</span>
               </li>
             </ul>
+            <div class="mb-4 text-sm text-gray-500 font-semibold">
+              sofort lieferbar
+            </div>
             <p class="text-sm text-gray-600 mb-4">
-              Dieses Angebot war unser Startschuss für die BPER-Revolution,
-              exklusiv für die ersten 200 Reservierungen. Die Nachfrage war
-              überwältigend, und wir haben uns entschieden, nur die dringendsten
-              Bedürfnisse zu erfüllen.
+              Dieses Angebot ist einzigartig und begrenzt – perfekt für den, der
+              sofort handelt und die maximale Unterstützung sucht. Nur eine
+              Reservierung pro Person möglich, um Exklusivität und Fairness zu
+              gewährleisten.
             </p>
+            <a
+              href="klarna-payment-info.html"
+              class="text-blue-600 hover:underline text-sm block mb-4"
+            >
+              Mehr zu Klarna Zahlungsoptionen →
+            </a>
             <button
               disabled=""
               class="mt-auto w-full py-2 bg-gray-100 text-gray-300 rounded-xl cursor-not-allowed"
@@ -682,17 +695,8 @@
           <div
             class="bg-white rounded-xl p-6 border-4 border-green-500 flex flex-col h-full relative overflow-hidden shadow-lg offer-card"
           >
-            <div
-              class="absolute top-0 right-0 bg-green-500 text-white py-1 px-4 rounded-bl-lg text-sm font-medium"
-            >
-              Aktuell
-            </div>
-
-            <h3 class="text-xl font-bold mb-2">Spezialangebot</h3>
+            <h3 class="text-xl font-bold mb-2">Einführungs-Angebot</h3>
             <div class="text-3xl font-bold mb-4">259 €</div>
-            <div class="mb-4 text-sm text-gray-500">
-              Nur 500 Geräte, pro Person ausschließlich!
-            </div>
             <ul class="mb-6 flex-1 space-y-2 text-sm">
               <li class="flex items-start">
                 <svg
@@ -710,7 +714,8 @@
                   ></path>
                 </svg>
                 <span
-                  >1 Jahr kostenlose Online-Datenspeicherung (Wert: 59 €)</span
+                  >1 Jahr Subsription fuer Leistungsfaehigkeit Bewertung durch
+                  APP</span
                 >
               </li>
               <li class="flex items-start">
@@ -728,10 +733,7 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span
-                  >1 Jahr kostenlose manuelle Risikowarnungen (Wert: 199
-                  €)</span
-                >
+                <span>1 Jahr kostenlose Online-Datenspeicherung</span>
               </li>
               <li class="flex items-start">
                 <svg
@@ -748,15 +750,22 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>KI-priorisierte Lieferung nach individuellem Bedarf</span>
+                <span>0 Risiko-90 Tage Geld zurueck Garantie</span>
               </li>
             </ul>
+            <div class="mb-4 text-sm text-gray-500 font-semibold">
+              erhaeltlich online ab August 2025
+            </div>
             <p class="text-sm text-gray-600 mb-4">
-              Dieses Angebot ist einzigartig und begrenzt – perfekt für den, der
-              sofort handelt und die maximale Unterstützung sucht. Nur eine
-              Reservierung pro Person, um Exklusivität und Fairness zu
-              gewährleisten.
+              Dieses Angebot ist für alle die den EarlyBird Rabatt verpasst
+              haben oder sich nicht qualifiziert haben.
             </p>
+            <a
+              href="klarna-payment-info.html"
+              class="text-blue-600 hover:underline text-sm block mb-4"
+            >
+              Mehr zu Klarna Zahlungsoptionen →
+            </a>
             <button
               class="mt-auto w-full py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-xl transition duration-300 checkout-button"
               data-tracking-url="https://blog.bper.online/click"
@@ -769,9 +778,8 @@
           <div
             class="bg-gray-50 rounded-xl p-6 border border-gray-200 flex flex-col h-full offer-card"
           >
-            <h3 class="text-xl font-bold mb-2">Einführungspreis</h3>
-            <div class="text-3xl font-bold mb-4">299 €</div>
-            <div class="mb-4 text-sm text-gray-500">Regulärer UVP-Preis</div>
+            <h3 class="text-xl font-bold mb-2">Offizieller Preis</h3>
+            <div class="text-3xl font-bold mb-4">359 €</div>
             <ul class="mb-6 flex-1 space-y-2 text-sm">
               <li class="flex items-start">
                 <svg
@@ -788,7 +796,10 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>Lieferstart planmäßig Mitte Juli 2025</span>
+                <span
+                  >1 Jahr Subsription fuer Leistungsfaehigkeit Bewertung durch
+                  APP</span
+                >
               </li>
               <li class="flex items-start">
                 <svg
@@ -805,7 +816,7 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>Begrenzte Verfügbarkeit nach dem Spezialangebot</span>
+                <span>1 Jahr kostenlose Online-Datenspeicherung</span>
               </li>
               <li class="flex items-start">
                 <svg
@@ -822,15 +833,21 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>Deutsche Qualitätstechnologie</span>
+                <span>0 Risiko-90 Tage Geld zurueck Garantie</span>
               </li>
             </ul>
+            <div class="mb-4 text-sm text-gray-500 font-semibold">
+              erhaeltlich online und in Apotheke ab Januar 2026
+            </div>
             <p class="text-sm text-gray-600 mb-4">
-              Der UVP-Preis von 299 € ist unser Standardeinführungspreis für die
-              Vorabvermarktung. Er spiegelt den echten Wert dieser
-              revolutionären Technologie wider – eine Investition in Ihre
-              Gesundheit, die sich lohnt.
+              Der offizielle Preis bei Serienproduktion.
             </p>
+            <a
+              href="klarna-payment-info.html"
+              class="text-blue-600 hover:underline text-sm block mb-4"
+            >
+              Mehr zu Klarna Zahlungsoptionen →
+            </a>
             <button
               class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300 checkout-button"
               data-tracking-url="https://blog.bper.online/click"
@@ -848,7 +865,7 @@
             class="text-sm md:text-base font-medium text-yellow-800 text-center"
           >
             <span class="font-bold">Achtung:</span> Handeln Sie schnell! Unsere
-            Produktion ist noch im Aufbau, und die ersten 500 Geräte sind
+            Produktion ist noch im Aufbau, und die ersten 200 Geräte sind
             begrenzt. Wenn Ihr Blutdruck noch nicht täglich überwacht werden
             muss, empfehlen wir Ihnen, vorerst zu warten – wir wollen die
             Ressourcen für die dringendsten Fälle nutzen.
