--- a/index.html
+++ b/index.html
@@ -2104,10 +2104,9 @@
               Aktuell
             </div>
             <h3 class="text-xl font-bold mb-2">
-              Globaler Produkterlebnisoffizier
+              Earlybird Preis für die ersten 200 Stk.
             </h3>
             <div class="text-3xl font-bold mb-4">199 €</div>
-            <div class="mb-4 text-sm text-gray-500">Nur bis 30.04.2025</div>
             <ul class="mb-6 flex-1 space-y-2 text-sm">
               <li class="flex items-start">
                 <svg
@@ -2124,7 +2123,10 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>1 jahr kostenlose Online-Datenspeicherung</span>
+                <span
+                  >1 Jahr Subsription fuer Leistungsfaehigkeit Bewertung durch
+                  APP</span
+                >
               </li>
               <li class="flex items-start">
                 <svg
@@ -2141,7 +2143,7 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>1 Jahr kostenlose manuelle Risiko</span>
+                <span>1 Jahr kostenlose Online-Datenspeicherung</span>
               </li>
               <li class="flex items-start">
                 <svg
@@ -2160,33 +2162,22 @@
                 </svg>
                 <span>0 Risiko-90 Tage Geld zurueck Garantie</span>
               </li>
-              <li class="flex items-start">
-                <svg
-                  class="w-5 h-5 text-green-500 mr-2 flex-shrink-0"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M5 13l4 4L19 7"
-                  ></path>
-                </svg>
-                <span
-                  >In Produktion bzw.Versandbereitstellung,Lieferung ab
-                  01.05</span
-                >
-              </li>
             </ul>
+            <div class="mb-4 text-sm text-gray-500 font-semibold">
+              sofort lieferbar
+            </div>
             <p class="text-sm text-gray-600 mb-4">
-              Dieses Angebot war unser Startschuss für die BPER-Revolution,
-              exklusiv für die ersten 200 Reservierungen. Die Nachfrage war
-              überwältigend, und wir haben uns entschieden, nur die dringendsten
-              Bedürfnisse zu erfüllen.
+              Dieses Angebot ist einzigartig und begrenzt – perfekt für den, der
+              sofort handelt und die maximale Unterstützung sucht. Nur eine
+              Reservierung pro Person möglich, um Exklusivität und Fairness zu
+              gewährleisten.
             </p>
+            <a
+              href="klarna-payment-info.html"
+              class="text-blue-600 hover:underline text-sm block mb-4"
+            >
+              Mehr zu Klarna Zahlungsoptionen →
+            </a>
             <button
               class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300"
             >
@@ -2198,12 +2189,12 @@
           <div
             class="opacity-60 bg-white rounded-xl p-6 flex flex-col h-full relative overflow-hidden shadow-lg"
           >
-            <h3 class="text-xl font-bold mb-2">Komplett-Pflegepaket</h3>
-            <div class="text-3xl font-bold mb-4">518 €</div>
-            <div class="mb-4 text-sm text-gray-500">
-              Nur ein Kompakt-Pflegepaket pro Person möglich – da individuelle
-              Betreuung enthalten ist.
-            </div>
+            <!-- Removed Aktuell badge -->
+            <h3 class="text-xl font-bold mb-2">Einführungs-Angebot</h3>
+            <!-- Title updated -->
+            <div class="text-3xl font-bold mb-4">259 €</div>
+            <!-- Price updated -->
+            <!-- Removed quantity limit -->
             <ul class="mb-6 flex-1 space-y-2 text-sm">
               <li class="flex items-start">
                 <svg
@@ -2220,8 +2211,10 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
+                <!-- Feature text updated -->
                 <span
-                  >1 Jahr kostenlose Online-Datenspeicherung (Wert: 59 €)</span
+                  >1 Jahr Subskription fuer Leistungsfaehigkeit Bewertung durch
+                  APP</span
                 >
               </li>
               <li class="flex items-start">
@@ -2239,10 +2232,8 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span
-                  >1 Jahr kostenlose manuelle Risikowarnungen (Wert: 199
-                  €)</span
-                >
+                <!-- Feature text updated -->
+                <span>1 Jahr kostenlose Online-Datenspeicherung</span>
               </li>
               <li class="flex items-start">
                 <svg
@@ -2259,52 +2250,19 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>Priorisierte Lieferung nach individuellem Bedarf</span>
-              </li>
-              <li class="flex items-start">
-                <svg
-                  class="w-5 h-5 text-green-500 mr-2 flex-shrink-0"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M5 13l4 4L19 7"
-                  ></path>
-                </svg>
+                <!-- Feature text updated -->
                 <span>0 Risiko-90 Tage Geld zurueck Garantie</span>
               </li>
-              <li class="flex items-start">
-                <svg
-                  class="w-5 h-5 text-green-500 mr-2 flex-shrink-0"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M5 13l4 4L19 7"
-                  ></path>
-                </svg>
-                <span
-                  >In Produktion: Lieferung ab Mitte Juli. Abonnieren Sie bitte
-                  unseren Newsletter, um über den aktuellen Lieferstatus
-                  informiert zu bleiben</span
-                >
-              </li>
+              <!-- Removed other list items -->
             </ul>
+            <!-- Added availability -->
+            <div class="mb-4 text-sm text-gray-500 font-semibold">
+              erhaeltlich online ab August 2025
+            </div>
             <p class="text-sm text-gray-600 mb-4">
-              Dieses Angebot ist einzigartig und begrenzt – perfekt für den, der
-              sofort handelt und die maximale Unterstützung sucht. Nur eine
-              Reservierung pro Person, um Exklusivität und Fairness zu
-              gewährleisten.
+              <!-- Description updated -->
+              Dieses Angebot ist für alle die den EarlyBird Rabatt verpasst
+              haben oder sich nicht qualifiziert haben.
             </p>
             <a
               href="klarna-payment-info.html"
@@ -2316,7 +2274,8 @@
               href="javascript:void(0)"
               class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300 block text-center checkout-button"
             >
-              Jetzt Angebot sichern
+              <!-- Button text kept as Jetzt reservieren -->
+              Jetzt reservieren
             </a>
           </div>
 
@@ -2324,9 +2283,11 @@
           <div
             class="bg-gray-50 rounded-xl p-6 border border-gray-200 flex flex-col h-full opacity-60"
           >
-            <h3 class="text-xl font-bold mb-2">Einführungspreis</h3>
+            <h3 class="text-xl font-bold mb-2">Offizieller Preis</h3>
+            <!-- Title updated -->
             <div class="text-3xl font-bold mb-4">299 €</div>
-            <div class="mb-4 text-sm text-gray-500">Regulaere UVP-Preis</div>
+            <!-- Price updated -->
+            <!-- Removed Regulaere UVP-Preis text -->
             <ul class="mb-6 flex-1 space-y-2 text-sm">
               <li class="flex items-start">
                 <svg
@@ -2343,7 +2304,11 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>Lieferstart planmäßig Mitte Juli 2025</span>
+                <!-- Feature text updated -->
+                <span
+                  >1 Jahr Subskription fuer Leistungsfaehigkeit Bewertung durch
+                  APP</span
+                >
               </li>
               <li class="flex items-start">
                 <svg
@@ -2360,7 +2325,8 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>Begrenzte Verfügbarkeit nach dem Spezialangebot</span>
+                <!-- Feature text updated -->
+                <span>1 Jahr kostenlose Online-Datenspeicherung</span>
               </li>
               <li class="flex items-start">
                 <svg
@@ -2377,46 +2343,19 @@
                     d="M5 13l4 4L19 7"
                   ></path>
                 </svg>
-                <span>Deutsche Qualitätstechnologie</span>
-              </li>
-              <li class="flex items-start">
-                <svg
-                  class="w-5 h-5 text-green-500 mr-2 flex-shrink-0"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M5 13l4 4L19 7"
-                  ></path>
-                </svg>
+                <!-- Feature text updated -->
                 <span>0 Risiko-90 Tage Geld zurueck Garantie</span>
               </li>
-              <li class="flex items-start">
-                <svg
-                  class="w-5 h-5 text-green-500 mr-2 flex-shrink-0"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M5 13l4 4L19 7"
-                  ></path>
-                </svg>
-                <span
-                  >In Produktion: Lieferung ab Mitte Juli nach
-                  Komplette-Pflegepaket</span
-                >
-              </li>
+              <!-- Removed other list items -->
             </ul>
+            <!-- Added availability -->
+            <div class="mb-4 text-sm text-gray-500 font-semibold">
+              erhaeltlich online und in Apotheke ab Januar 2026
+            </div>
+            <!-- Description updated -->
+            <p class="text-sm text-gray-600 mb-4">
+              Der offizielle Preis bei Serienproduktion.
+            </p>
 
             <a
               href="klarna-payment-info.html"
@@ -2428,7 +2367,8 @@
               href="javascript:void(0)"
               class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300 block text-center checkout-button"
             >
-              Jetzt Angebot sichern
+              <!-- Button text kept as Jetzt vorbestellen -->
+              Jetzt vorbestellen
             </a>
           </div>
         </div>
@@ -2441,7 +2381,7 @@
             class="text-sm md:text-base font-medium text-yellow-800 text-center"
           >
             <span class="font-bold">Achtung:</span> Handeln Sie schnell! Unsere
-            Produktion ist noch im Aufbau, und die ersten 500 Geräte sind
+            Produktion ist noch im Aufbau, und die ersten 200 Geräte sind
             begrenzt. Wenn Ihr Blutdruck noch nicht täglich überwacht werden
             muss, empfehlen wir Ihnen, vorerst zu warten – wir wollen die
             Ressourcen für die dringendsten Fälle nutzen.
@@ -2929,7 +2869,7 @@
       }
 
       document.addEventListener('DOMContentLoaded', function () {
-        document.body.appendChild(stripeMode);
+        // document.body.appendChild(stripeMode); // This line adds the element
         console.log('Stripe mode:', isLiveMode ? 'LIVE' : 'TEST');
       });
 
