--- a/index.html
+++ b/index.html
@@ -2179,7 +2179,7 @@
               Mehr zu Klarna Zahlungsoptionen →
             </a>
             <button
-              class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300"
+              class="mt-auto w-full py-2 bg-green-500 hover:bg-green-600 text-white rounded-xl transition duration-300"
             >
               Jetzt Angebot sichern
             </button>
